need to fix img not centered and start js

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   box-sizing: border-box;
 }
 
+ /*********** CONTENITORE GENERALE ***********/
 .container {
   display: flex;
   justify-content: center;
@@ -16,21 +17,43 @@
   display: flex;
   justify-content: center;
   width: 70%;
-  height: 60vh;
+  height: 50vh;
 }
 
+/*********** CONTENITORE IMMMAGINI ***********/
 .item-container{
   width: 80%;
   height: 100%;
+  position: relative;
 }
 
 .item {
-  width: 100%;
-  height: 100%;
+  height: 50vh;
+  display: none;
+}
+
+.active{
+  display: block;
 }
 
 .item img{
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.next{
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%);
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  font-size: 2rem;
+  font-weight: bold;
+  background-color: rgba(240, 240, 240, 0.5);
+  color: #444;
+  border-radius: 50%;
+  cursor: pointer;
+  padding: 0 4px;
 }
